Playing with Tailwind and adding a class or two for container

--- a/frontend/src/_templates/default.njk
+++ b/frontend/src/_templates/default.njk
@@ -9,7 +9,7 @@
     </title>
   </head>
 
-  <body>
+  <body class="container mx-auto">
     <a href="/">Home</a>
     {{ content|safe }}
   </body>
