--- a/frontend/src/_templates/default.njk
+++ b/frontend/src/_templates/default.njk
@@ -10,7 +10,15 @@
   </head>
 
   <body class="container mx-auto">
-    <a href="/">Home</a>
+    <nav class="flex justify-between">
+      <h2>Garratt's Place</h2>
+      <div>
+        <a href="/">Home</a>
+        <a href="/">Blog</a>
+        <a href="/">About</a>
+      </div>
+    </nav>
+
     {{ content|safe }}
   </body>
 </html>
